--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
