--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
     "firebase": "^9.17.1",
     "firebaseui": "^6.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
