--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-textarea-autosize": "^8.4.1",
     "redux": "^4.2.1",
     "sass": "^1.58.3",
     "sweetalert2": "^11.7.3",
